[project]
name = "des-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jedrzej Grabski", email = "grabski.dev@gmail.com"},
]
dependencies = ["setuptools>=80.4.0", "numpy>=2.2.5", "matplotlib>=3.10.3", "scipy>=1.15.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
run-example = "python -m examples.simple_optimization"

[tool.pdm]
distribution = false
