[project]
name = "python-evo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jedrzej Grabski", email = "grabski.dev@gmail.com"},
]
dependencies = ["setuptools>=80.4.0", "numpy>=2.2.5", "matplotlib>=3.10.3", "scipy>=1.15.3", "opfunu>=1.0.1", "seaborn>=0.13.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
run-example = "python -m examples.simple_optimization"
run-r = "python -m examples.run_for_r_comparison"

[tool.pdm]
distribution = false
